k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  labels:
    app: spring-boot-app
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80   # Service port
      targetPort: 8080  # Port on the container where the app is running
